--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,9 @@ p {
   padding: 0;
   margin: 0;
 }
+img {
+  display: block;
+}
 
 .container {
   outline: 1px solid red;
@@ -80,14 +83,28 @@ ul {
   line-height: normal;
   letter-spacing: 0.78px;
 }
+.header-link-list {
+  display: flex;
+  align-items: center;
+}
 
 .header-link {
+  margin-right: 50px;
   text-decoration: none;
   font-family: var(--main-font);
   color: var(--main-text-color);
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.28px;
+}
+.header-link-last {
+  font-family: var(--main-font);
+  color: var(--main-text-color);
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.28px;
+  text-decoration: none;
+  margin-right: 0;
 }
 
 .header-list-contact {
@@ -118,12 +135,19 @@ ul {
 }
 
 .header-link-accent {
+  margin-right: 50px;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   color: var(--accent-color);
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.28px;
+}
+.header-link-last:hover {
+  color: var(--accent-color);
+}
+.header-link-last:focus {
+  color: var(--accent-color);
 }
 .header-link:hover {
   color: var(--accent-color);
