--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ img {
   background-color: var(--main-bg-color);
 }
 ul {
-  /* list-style-type: none; */
+  list-style-type: none;
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
