--- a/css/styles.css
+++ b/css/styles.css
@@ -338,7 +338,7 @@ ul {
   margin-right: 30px;
 }
 .img-box-activity:last-child {
-  margin-left: 0;
+  margin-right: 0px;
 }
 /* Our team */
 .team-img {
