--- a/css/styles.css
+++ b/css/styles.css
@@ -199,8 +199,13 @@ ul {
   background-color: var(--dark-bg-color);
 }
 .hero-container {
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-title {
+  width: 650px;
+  margin-left: auto;
+  margin-right: auto;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36364;
