--- a/css/styles.css
+++ b/css/styles.css
@@ -539,12 +539,18 @@ ul {
 
   margin-right: 120px;
 }
+.portfolio-links-list {
+  display: flex;
+  align-items: center;
+  margin-bottom: 32px;
+  margin-top: 32px;
+}
 .portfolio-header-link {
-  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 
   margin-right: 50px;
+
   text-decoration: none;
   font-family: var(--main-font);
   color: var(--main-text-color);
@@ -553,21 +559,31 @@ ul {
   letter-spacing: 0.28px;
 }
 
-.portfolio-links-list {
+.portfolio-header-link:hover {
+  color: var(--accent-color);
+}
+.portfolio-header-link:focus {
+  color: var(--accent-color);
+}
+
+.portfolio-header-link-acnt {
+  text-decoration: none;
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+
+  margin-right: 50px;
+}
+
+.portfolio-links-list-acnt:hover {
+  font-family: var(--main-font);
+}
+.portfolio-links-list-acnt:focus {
   font-family: var(--main-font);
 }
 
-.header-link-portfolio {
-  font-weight: 500;
-  width: 216px;
-  height: 50px;
-  color: var(--accent-color);
-  text-decoration: none;
-}
-
-.portfoli-item-link {
-  text-decoration: none;
-}
 /* filter section */
 .filters-list {
   display: flex;
@@ -586,6 +602,7 @@ ul {
   flex-shrink: 0;
 
   margin-bottom: 50px;
+  margin-right: 8px;
 }
 .filters-items-button:hover {
   background: var(--accent-color);
@@ -611,7 +628,30 @@ ul {
   color: #fff;
 
   margin-bottom: 50px;
+  margin-right: 8px;
 }
+/* Portfolio items */
+
+.portfoli-item-link {
+  text-decoration: none;
+}
+.portfolio-items-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.portfolio-item {
+  width: 370px;
+
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+/* .portfolio-item:nth-last-child(3n) {
+  margin-right: 0;
+}
+.portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+} */
+
 .portfolio-product-name {
   font-weight: 700;
   font-size: 18px;
@@ -624,4 +664,10 @@ ul {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+.portfoli-image {
+  padding-bottom: 20px;
+}
+.portfolio-product-name {
+  margin-bottom: 4px;
 }
