--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,6 @@ img {
 }
 
 .container {
-  /* outline: 1px solid red; */
-
   width: 1200px;
 
   padding-left: 15px;
@@ -56,6 +54,7 @@ img {
 /* Header */
 .header {
   background-color: var(--main-bg-color);
+  border-bottom: 1px solid #ececec;
 }
 ul {
   list-style-type: none;
@@ -103,6 +102,9 @@ ul {
 }
 
 .header-link-accent {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   text-decoration: none;
   font-family: var(--main-font);
   color: var(--accent-color);
@@ -124,15 +126,15 @@ ul {
   letter-spacing: 0.28px;
 }
 
-.header-group {
-  margin-left: auto;
-}
-
 .header-list-contact {
+  margin-left: auto;
   display: flex;
 }
 .group-link {
   margin-right: 50px;
+}
+.group-link:last-child {
+  margin-right: 0;
 }
 
 .header-link-mail {
@@ -231,6 +233,7 @@ ul {
 /* Our activity */
 .our-activity-section {
   background: var(--main-bg-color);
+  margin-top: 94px;
 }
 .our-activity-list {
   display: flex;
@@ -349,6 +352,9 @@ ul {
   margin-right: 0px;
 }
 /* Our team */
+.our-team-section {
+  margin-top: 94px;
+}
 
 .team-name {
   margin-bottom: 10px;
@@ -378,8 +384,8 @@ ul {
   margin-right: 30px;
 }
 .team-members-info {
-  margin-bottom: 30px;
-  margin-top: 30px;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 .team-members:last-child {
   margin-right: 0;
