--- a/css/styles.css
+++ b/css/styles.css
@@ -594,7 +594,7 @@ ul {
   justify-content: center;
 }
 .filter-items {
-  margin-bottom: 50px;
+  margin-bottom: 34px;
   margin-right: 8px;
 }
 .filter-items:last-child {
@@ -650,6 +650,9 @@ ul {
 
   margin-right: 30px;
   margin-bottom: 30px;
+}
+.portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .portfolio-product-name {
