--- a/css/styles.css
+++ b/css/styles.css
@@ -642,8 +642,9 @@ ul {
   text-decoration: none;
 }
 .portfolio-items-list {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .portfolio-item {
   width: 370px;
@@ -651,6 +652,16 @@ ul {
   margin-right: 30px;
   margin-bottom: 30px;
 }
+.portfolio-item:nth-last-child(7) {
+  margin-right: 0;
+}
+.portfolio-item:nth-last-child(4) {
+  margin-right: 0;
+}
+.portfolio-item:nth-last-child(1) {
+  margin-right: 0;
+}
+
 .portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
