--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ img {
 }
 
 .container {
+  border: 1px solid red;
   width: 1200px;
 
   padding-left: 15px;
@@ -455,10 +456,6 @@ ul {
 }
 
 /* Footer */
-.footer-container {
-  padding-bottom: 60px;
-  padding-top: 60px;
-}
 
 .footer-section {
   padding-top: 60px;
@@ -498,6 +495,12 @@ ul {
 .footer-contacts {
   text-align: left;
 }
+.footer-item {
+  margin-bottom: 9px;
+}
+.footer-item:last-child {
+  margin-bottom: 0;
+}
 .footer-link {
   display: block;
   justify-content: left;
@@ -508,8 +511,6 @@ ul {
   flex-shrink: 0;
   color: rgba(255, 255, 255, 0.6);
   letter-spacing: 0.42px;
-
-  margin-bottom: 9px;
 }
 
 .footer-link:hover {
@@ -535,13 +536,11 @@ ul {
   line-height: normal;
   letter-spacing: 0.78px;
 
-  margin-right: 162px;
+  margin-right: 93px;
 }
 .portfolio-links-list {
   display: flex;
   align-items: center;
-  margin-bottom: 32px;
-  margin-top: 32px;
 }
 .portfolio-nav-link {
   margin-right: 50px;
@@ -587,16 +586,14 @@ ul {
 .portfolio-links-list-accent:focus {
   font-family: var(--main-font);
 }
-.main-container {
-  margin-top: 94px;
-}
+
 /* filter section */
 .filters-list {
   display: flex;
   justify-content: center;
+  margin-bottom: 50px;
 }
 .filter-items {
-  margin-bottom: 34px;
   margin-right: 8px;
 }
 .filter-items:last-child {
@@ -644,25 +641,26 @@ ul {
   text-decoration: none;
 }
 .portfolio-items-list {
-  display: inline-flex;
+  display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  padding-left: 15px;
-  padding-right: 15px;
+  gap: 30px;
 }
 .portfolio-item {
   width: 370px;
 
+  /* margin-right: 30px; */
+  /* margin-bottom: 30px;  */
+}
+/* .portfolio-item:not(:last-child) {
   margin-right: 30px;
-  margin-bottom: 30px;
-}
-.portfolio-item:nth-last-child(3n + 1) {
+} */
+/* .portfolio-item:nth-last-child(3n + 1) {
   margin-right: 0;
-}
+} */
 
-.portfolio-item:nth-last-child(-n + 3) {
+/* .portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
-}
+} */
 
 .portfolio-product-name {
   font-weight: 700;
