--- a/css/styles.css
+++ b/css/styles.css
@@ -640,20 +640,20 @@ ul {
 .portfoli-item-link {
   text-decoration: none;
 }
+
 .portfolio-items-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  margin-right: -30px;
 }
 .portfolio-item {
   width: 370px;
 
-  /* margin-right: 30px; */
-  /* margin-bottom: 30px;  */
-}
-/* .portfolio-item:not(:last-child) {
   margin-right: 30px;
-} */
+}
+.portfolio-item:not(:last-child) {
+  margin-right: 30px;
+}
 /* .portfolio-item:nth-last-child(3n + 1) {
   margin-right: 0;
 } */
@@ -674,12 +674,8 @@ ul {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
 
-  padding-bottom: 20px;
-}
-.portfoli-image {
-  padding-bottom: 20px;
-}
 .portfolio-product-name {
   margin-bottom: 4px;
 }
