--- a/css/styles.css
+++ b/css/styles.css
@@ -645,22 +645,20 @@ ul {
   display: flex;
   flex-wrap: wrap;
   margin-right: -30px;
+  /* gap: 30px; */
 }
 .portfolio-item {
   width: 370px;
 
   margin-right: 30px;
 }
-.portfolio-item:not(:last-child) {
-  margin-right: 30px;
-}
-/* .portfolio-item:nth-last-child(3n + 1) {
+.portfolio-item:nth-last-child(3n + 1) {
   margin-right: 0;
-} */
+}
 
-/* .portfolio-item:nth-last-child(-n + 3) {
+.portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
-} */
+}
 
 .portfolio-item-titel {
   padding-left: 24px;
