--- a/css/styles.css
+++ b/css/styles.css
@@ -587,6 +587,12 @@ ul {
   font-family: var(--main-font);
 }
 
+/* Portfolio section */
+.portfolio-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* filter section */
 .filters-list {
   display: flex;
@@ -595,6 +601,10 @@ ul {
 }
 .filter-items {
   margin-right: 8px;
+  padding-top: 1px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-bottom: 1px;
 }
 .filter-items:last-child {
   margin-right: 0;
@@ -630,8 +640,7 @@ ul {
   text-align: center;
   color: var(--main-text-color);
   border-radius: 4px;
-  width: 73px;
-  flex-shrink: 0;
+
   background: var(--accent-color);
   color: #fff;
 }
@@ -650,6 +659,7 @@ ul {
 .portfolio-item {
   width: 370px;
 
+  margin-bottom: 30px;
   margin-right: 30px;
 }
 .portfolio-item:nth-last-child(3n + 1) {
