--- a/css/styles.css
+++ b/css/styles.css
@@ -671,7 +671,7 @@ ul {
 }
 
 .portfolio-item-title {
-  border-left: 1px solid #d74747;
+  border-left: 1px solid #eee;
   border-right: 1px solid #eee;
   border-bottom: 1px solid #eee;
   padding-left: 24px;
