--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ img {
 }
 
 .container {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   width: 1200px;
 
   padding-left: 15px;
@@ -657,7 +657,7 @@ ul {
 }
 .portfolio-item {
   width: 370px;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25); */
 
   margin-bottom: 30px;
   margin-right: 30px;
